fix(test): testeo de las validaciones de overlapping y propagacion de transactional y pessimistic locking